feat(qc): Sprint 23 PHI pre-harvest interval check + block + rule